Fixed edition being broken because of textarea's display:none style. Fixed new editors created with + having no proper gutter and wrong left alignment.

--- a/style.css
+++ b/style.css
@@ -40,11 +40,6 @@ body
 	margin: 5px;
 }
 
-textarea
-{
-	display: none;
-}
-
 #editor-tabs
 {
 	height: 100%;
